scroll added to inventory class to prevent player page layout issues on mobile

--- a/src/pages/player/index.css
+++ b/src/pages/player/index.css
@@ -6,6 +6,7 @@
 
 .inventory {
     display: flow-root;
+    overflow-x: scroll;
 }
 
 .grid-container {
